resources/sass/app-dark.scss
@import "variables";

$dm-base: hsl(224, 15%, 7%);
$dm-base-5: lighten($dm-base, 5%);
$dm-base-20: lighten($dm-base, 20%);

$dm-trwlRot: hsl(6, 100%, 73%);
$dm-trwlRot-shape: hsl(6, 100%, 65%);
$dm-trwlBlue: hsl(217, 100%, 81%);
$dm-lightblue: hsl(209, 81%, 67%);

$dm-body: hsl(224, 10%, 75%);

:root.dark {
    --mdb-body-color: #{$dm-body};
    --mdb-modal-bg: #{$dm-base};

    --mdb-link-color: #{$dm-lightblue};
    --mdb-btn-hover-color: #{$dm-lightblue};
    --mdb-btn-hover-color: #{$dm-lightblue};
    --mdb-btn-focus-color: #{$dm-lightblue};
    --mdb-btn-active-color: #{$dm-lightblue};

    --mdb-nav-tabs-link-color: $dm-lightblue;

    body {
        background-color: $dm-base;
        color: $dm-body !important;
    }

    a {
        color: $dm-trwlBlue;
    }

    .card {
        background-color: $dm-base-5;
    }

    .card-header {
        border-bottom-color: $dm-base-20;
    }

    .card-footer {
        border-top-color: $dm-base-20;
    }

    .form-control,
    .input-group-text {
        background-color: lighten($dm-base, 2%);
        border-color: lighten($dm-base, 30%) !important;
        color: lighten($dm-body, 8%) !important;
        &:focus {
            background-color: lighten($dm-base, 10%);
        }
    }

    .form-select {
        background-color: lighten($dm-base, 2%);
        color: $dm-body !important;
        border-color: lighten($dm-base, 30%) !important;
        &:focus {
            background-color: lighten($dm-base, 10%);
        }
    }

    .form-floating > label {
        color: $dm-body !important;
    }

    .form-outline .form-control ~ .form-notch div {
        border-color: lighten($dm-base, 30%) !important;
    }

    .input-group-text {
        background-color: lighten($dm-base, 6%);
    }

    .stationSearchButton {
        border-color: lighten($dm-base, 30%);
    }

    .btn-primary {
        --mdb-btn-box-shadow: 0 4px 9px -4px $dm-base;
    }

    .btn-outline-primary {
        --mdb-btn-bg: transparent;
        --mdb-btn-color: #{$dm-lightblue} !important;
        --mdb-btn-hover-bg: transparent;
        --mdb-btn-hover-color: #{$dm-lightblue} !important;
        --mdb-btn-focus-bg: transparent;
        --mdb-btn-focus-color: #{$dm-lightblue} !important;
        --mdb-btn-active-bg: transparent;
        --mdb-btn-active-color: #{$dm-lightblue} !important;
        border-color: desaturate(darken($dm-lightblue, 15%), 25%);
    }

    .btn-outline-secondary {
        --mdb-btn-bg: transparent;
        --mdb-btn-color: #{lighten($dm-base, 61%)};
        --mdb-btn-hover-bg: transparent;
        --mdb-btn-hover-color: #{lighten($dm-base, 61%)};
        --mdb-btn-focus-bg: transparent;
        --mdb-btn-focus-color: #{lighten($dm-base, 61%)};
        --mdb-btn-active-bg: transparent;
        --mdb-btn-active-color: #{lighten($dm-base, 61%)};
        border-color: lighten($dm-base, 45%);
    }

    .text-muted {
        color: hsl(224, 10%, 67%) !important;
    }
    .trwl-bulletpoint {
        background: lighten($dm-base, 30%) !important;
        border-color: $dm-trwlRot-shape;
    }
    .text-trwl {
        color: $dm-trwlRot !important;
    }

    ul.timeline > li:first-child:before {
        background-color: lighten($dm-base, 45%);
    }

    .map,
    #activeJourneys #map {
        filter: grayscale(100%) invert(100%);
    }

    // status

    .status {
        .progress {
            .progress-bar {
                background: $dm-trwlRot-shape;
            }
        }

        .like {
            color: lighten(#f5a530, 10%);
        }

        .visibility-icon {
            color: lighten(#b3b3b3, 10%) !important;
        }
    }

    $outline-grey: lighten(#495057, 10%);

    .btn-outline-grey {
        color: $outline-grey;
        border-color: $outline-grey;
    }

    .btn-outline-grey:active,
    .btn-check:active + .btn-outline-grey,
    .btn-check:checked + .btn-outline-grey,
    .btn-outline-grey.active,
    .show > .btn-outline-grey.dropdown-toggle {
        color: #fff;
        background-color: $outline-grey;
    }

    .modal {
        --mdb-modal-bg: #{$dm-base-5};
    }

    .modal-header {
        border-bottom-color: $dm-base-20;
    }

    .modal-footer {
        border-top-color: $dm-base-20;
    }

    .nav-tabs .nav-link {
        --mdb-nav-tabs-link-color: #{$dm-lightblue} !important;
        --mdb-nav-tabs-link-active-color: #{lighten($dm-lightblue, 10%)} !important;
        --mdb-nav-tabs-link-active-border-color: #{darken($dm-lightblue, 10%)} !important;
    }

    .col-form-label {
        color: $dm-body !important;
    }

    $btn-link-base: #3b71ca;

    .btn-link {
        --mdb-btn-color: #{lighten($btn-link-base, 1%)} !important;
        --mdb-btn-hover-color: #{lighten($btn-link-base, 1%)} !important;
        --mdb-btn-hover-bg: #{lighten($dm-base, 1%)} !important;
        --mdb-btn-focus-color: #{lighten($btn-link-base, 1%)} !important;
        --mdb-btn-active-color: #{lighten($btn-link-base, 1%)} !important;
        --mdb-btn-disabled-color: #9e9e9e;
        --mdb-btn-box-shadow: none;
        text-decoration: none;
        box-shadow: var(--mdb-btn-box-shadow);
    }

    .btn-light {
        color: #a4a4a4 !important;
        --mdb-btn-bg: #{lighten($dm-base, 10%)} !important;
        --mdb-btn-focus-bg: #{lighten($dm-base, 10%)} !important;
        --mdb-btn-hover-bg: #{lighten($dm-base, 10%)} !important;
        --mdb-btn-focus-color: #4f4f4f;
        --mdb-btn-hover-bg: #{lighten($dm-base, 10%)} !important;
        --mdb-btn-active-color: #4f4f4f;
        --mdb-btn-active-bg: #{lighten($dm-base, 20%)} !important;
        --mdb-btn-box-shadow: none;
        --mdb-btn-hover-box-shadow: none !important;
    }

    .nav-tabs .nav-link:hover {
        background-color: lighten($dm-base, 10%) !important;
    }

    .nav-tabs .nav-link.active {
        background-color: lighten($dm-base, 10%) !important;
    }

    .btn-outline-dark {
        --mdb-btn-color: #{lighten($dm-base, 50%)} !important;
        --mdb-btn-hover-color: #{lighten($dm-base, 70%)} !important;
        --mdb-btn-hover-bg: #{lighten($dm-base, 10%)} !important;
        --mdb-btn-focus-color: #{lighten($dm-base, 10%)} !important;
        --mdb-btn-active-color: #{lighten($dm-base, 10%)} !important;
        --mdb-btn-disabled-color: #9e9e9e;
        --mdb-btn-box-shadow: none;
        text-decoration: none;
        box-shadow: var(--mdb-btn-box-shadow);
    }

    .dropdown-menu {
        color: lighten($dm-base, 10%) !important;
        background-color: $dm-base-5 !important;
    }

    .dropdown-item {
        color: $dm-body !important;
    }

    .dropdown-item:hover {
        background-color: lighten($dm-base, 15%) !important;
    }

    .awesomplete > ul {
        background: lighten($dm-base, 10%);
    }

    .table {
        border-color: $dm-base-20;
    }

    .dropdown-divider {
        border-top-color: $dm-base-20;
    }

    .form-outline .form-control ~ .form-label {
        color: lighten($dm-base, 50%);
    }

    .list-group-item {
        background-color: lighten($dm-base, 15%);
        color: $dm-body !important;
        &:hover {
            background-color: lighten($dm-base, 10%);
        }
    }

    #last-stations .list-group-item.list-group-item-action.title {
        background-color: lighten($dm-base, 10%);
        color: $dm-body !important;
    }

    .image-box img,
    .img-thumbnail {
        filter: brightness(0.8) saturate(0.8);
    }

    .bg-trwl {
        background-color: rgb(165 35 41) !important;
    }

    .navbar-brand {
        color: #dddddd !important;
    }

    .text-success {
        color: #58ea5e !important;
    }

    .text-warning {
        color: #ffc659 !important;
    }

    .alert-warning {
        background-color: rgb(115, 76, 0);
        color: rgb(251, 251, 251);
    }

    .text-danger {
        color: #ff9191 !important;
    }

    .alert-danger {
        background-color: rgb(132, 46, 60);
        color: rgb(238, 238, 238);
    }

    #stationboard .stationboardDivider {
        border-top-color: $dm-base-20;
    }

    // TODO: this is absolutely a hack
    .btn-close {
        filter: invert(1);
    }

    ::placeholder {
        /* Chrome, Firefox, Opera, Safari 10.1+ */
        color: lighten($dm-base, 45%) !important;
        opacity: 1; /* Firefox */
    }
}

